# esp-32

./: .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
src/: error.rs  main.rs  wifi.rs
src/presets/: mod.rs  running_rainbow.rs
src/wifi/: mod.rs
